--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 [compat]
 DynamicalSystemsBase = "3.4"
 NaNMath = "1"
-ProcessBasedModelling = "0.1"
+ProcessBasedModelling = "0.1, 1.0"
 Reexport = "1.2"
 Roots = "2"
 julia = "1.9"
